PLT-7370 Fixed leave team icon height on IE11

--- a/sass/layout/_sidebar-menu.scss
+++ b/sass/layout/_sidebar-menu.scss
@@ -72,6 +72,7 @@
 
                 svg {
                     fill-opacity: 0.85;
+                    height: 18px;
                     position: relative;
                     top: 4px;
                     width: 18px;
